--- a/chatbot_development.ipynb
+++ b/chatbot_development.ipynb
@@ -18,27 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.11.6' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from huggingface_hub import login\n",
     "\n",
     "\n",
-    "from model import load_model, save_model\n",
-    "from chat import SchoolChatbot"
+    "from src.model import load_model, save_model\n",
+    "from src.chat import SchoolChatbot"
    ]
   },
   {
@@ -50,12 +39,12 @@
     "\"\"\"\n",
     "TODO: Add your Hugging Face token\n",
     "Options:\n",
-    "1. Use login() and enter token when prompted\n",
+    "1. Use login() and enter token when prompted. It won't ask for your token if you already logged in using the command: huggingface-cli login in the terminal.\n",
     "2. Set environment variable HUGGINGFACE_TOKEN\n",
     "3. Pass token directly (not recommended for shared notebooks)\n",
     "\"\"\"\n",
     "\n",
-    "# login()  # Uncomment this line and add your token\n",
+    "login()\n",
     "\n"
    ]
   },
@@ -74,7 +63,6 @@
    "source": [
     "\"\"\"\n",
     "Load the model using functions from model.py\n",
-    "Note: This might take a few minutes depending on your hardware\n",
     "\"\"\"\n",
     "\n",
     "model, tokenizer = load_model()\n",
@@ -93,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,17 +98,14 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Test out generating some responses from the chatbot\n",
+    "Test out generating some responses from the chatbot.\n",
+    "Inference time\n",
     "\"\"\"\n",
-    "test_questions = [\n",
-    "    \"What schools in Jamaica Plain offer Spanish programs?\",\n",
-    "    \"How do I schedule a tour of the Hernandez School?\"\n",
-    "]\n",
+    "test_question = \"I live in Jamaica Plain and want to send my child to a school that offers Spanish programs. What schools are available?\"\n",
     "\n",
-    "for question in test_questions:\n",
-    "    print(f\"\\nQuestion: {question}\")\n",
-    "    response = chatbot.get_response(question)\n",
-    "    print(f\"Response: {response}\")\n"
+    "print(f\"\\nQuestion: {test_question}\")\n",
+    "response = chatbot.get_response(test_question)\n",
+    "print(f\"Response: {response}\")\n"
    ]
   },
   {
@@ -129,7 +114,9 @@
    "source": [
     "# TODO: Update pre-trained Llama to be a school choice chatbot\n",
     "\n",
-    "This part is up to you! You might want to finetune the model, simply make a really good system prompt, use RAG, provide it boston school choice data somehow, etc. Be creative! You can also feel free to do this in another script and then evaluate the model here."
+    "This part is up to you! You might want to finetune the model, simply make a really good system prompt, use RAG, provide it boston school choice data somehow, etc. Be creative! If you choose to finetune the model, we recommend using LoRA.\n",
+    "\n",
+    "You can also feel free to do this in another script and then evaluate the model here."
    ]
   },
   {
@@ -139,19 +126,28 @@
    "outputs": [],
    "source": [
     "# If you update the model, you can use the `save_model` function from model.py to save the new model\n",
+    "# Note: This might take a few minutes depending on your hardware. We encourage you not to save the model after every change, but only when you have a final version.\n",
     "save_model(model, tokenizer)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
