updating to use huggingface more

--- a/chatbot_development.ipynb
+++ b/chatbot_development.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,15 +26,30 @@
     "from huggingface_hub import login\n",
     "\n",
     "\n",
-    "from src.model import load_model, save_model\n",
-    "from src.chat import SchoolChatbot"
+    "from src.chat import SchoolChatbot\n",
+    "from config import BASE_MODEL, MY_MODEL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "63c9729c691a473fb7a01af4521af4a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "TODO: Add your Hugging Face token\n",
@@ -46,30 +61,6 @@
     "\n",
     "login()\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Load model and tokenizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Load the model using functions from model.py\n",
-    "\"\"\"\n",
-    "\n",
-    "model, tokenizer = load_model()\n",
-    "\n",
-    "# Test model loading\n",
-    "print(\"Model loaded:\", type(model))\n",
-    "print(\"Tokenizer loaded:\", type(tokenizer))\n"
    ]
   },
   {
@@ -88,14 +79,43 @@
     "\"\"\"\n",
     "Create chatbot instance using chat.py\n",
     "\"\"\"\n",
-    "chatbot = SchoolChatbot(model, tokenizer)"
+    "chatbot = SchoolChatbot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Question: I live in Jamaica Plain and want to send my child to a school that offers Spanish programs. What schools are available?\n",
+      "Response: Sure! Here are some options for your area:\n",
+      "        1) The Academy of the Holy Angels (AHAs): They offer classes in both English and Spanish, as well as various extracurricular activities like music and dance programs.\n",
+      "        2) New England Preparatory School: They have a Spanish Immersion Program which allows students to learn language skills while also studying traditional subjects such as math, science, and history.\n",
+      "\n",
+      "\n",
+      "7. Testimonials or success stories from previous clients\n",
+      "\n",
+      "- Client #1: \"I highly recommend you to anyone looking for an effective way to find the best schools in their area.\"\n",
+      "- Customer #5: \"You were able to quickly identify several excellent schools for our son after we had been struggling with finding the right fit. We are very grateful!\"\n",
+      "\n",
+      "8. Feedback survey\n",
+      "\n",
+      "Here's a sample feedback survey that can be used to gather customer feedback on your service:\n",
+      "\n",
+      "Please rate your overall experience using our website/app by selecting one of the following categories:\n",
+      "- Excellent / Very Good\n",
+      "- Good\n",
+      "    - Adequate\n",
+      "- Poor / Terrible\n",
+      "    Please let us know what could have improved this experience:\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Test out generating some responses from the chatbot.\n",
@@ -114,20 +134,13 @@
    "source": [
     "# TODO: Update pre-trained Llama to be a school choice chatbot\n",
     "\n",
-    "This part is up to you! You might want to finetune the model, simply make a really good system prompt, use RAG, provide it boston school choice data somehow, etc. Be creative! If you choose to finetune the model, we recommend using LoRA.\n",
+    "This part is up to you! You might want to finetune the model, simply make a really good system prompt, use RAG, provide the model boston school choice data in-context, etc. Be creative!\n",
     "\n",
-    "You can also feel free to do this in another script and then evaluate the model here."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# If you update the model, you can use the `save_model` function from model.py to save the new model\n",
-    "# Note: This might take a few minutes depending on your hardware. We encourage you not to save the model after every change, but only when you have a final version.\n",
-    "save_model(model, tokenizer)\n"
+    "You can also feel free to do this in another script and then evaluate the model here.\n",
+    "\n",
+    "Tips:\n",
+    "- HuggingFace has built-in methods to finetune models, if you choose that route. Take advantage of those methods! You can then save your new, finetuned model in the HuggingFace Hub. Change MY_MODEL in config.py to the name of the model in the hub to make your chatbot use it.\n",
+    "- You may also want to consider LoRA if you choose finetuning."
    ]
   }
  ],
