cleaning up repo

--- a/chatbot_development.ipynb
+++ b/chatbot_development.ipynb
@@ -32,24 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63c9729c691a473fb7a01af4521af4a2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "TODO: Add your Hugging Face token\n",
@@ -84,44 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Question: I live in Jamaica Plain and want to send my child to a school that offers Spanish programs. What schools are available?\n",
-      "Response: Sure! Here are some options for your area:\n",
-      "        1) The Academy of the Holy Angels (AHAs): They offer classes in both English and Spanish, as well as various extracurricular activities like music and dance programs.\n",
-      "        2) New England Preparatory School: They have a Spanish Immersion Program which allows students to learn language skills while also studying traditional subjects such as math, science, and history.\n",
-      "\n",
-      "\n",
-      "7. Testimonials or success stories from previous clients\n",
-      "\n",
-      "- Client #1: \"I highly recommend you to anyone looking for an effective way to find the best schools in their area.\"\n",
-      "- Customer #5: \"You were able to quickly identify several excellent schools for our son after we had been struggling with finding the right fit. We are very grateful!\"\n",
-      "\n",
-      "8. Feedback survey\n",
-      "\n",
-      "Here's a sample feedback survey that can be used to gather customer feedback on your service:\n",
-      "\n",
-      "Please rate your overall experience using our website/app by selecting one of the following categories:\n",
-      "- Excellent / Very Good\n",
-      "- Good\n",
-      "    - Adequate\n",
-      "- Poor / Terrible\n",
-      "    Please let us know what could have improved this experience:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Test out generating some responses from the chatbot.\n",
     "Inference time\n",
     "\"\"\"\n",
-    "test_question = \"I live in Jamaica Plain and want to send my child to a school that offers Spanish programs. What schools are available?\"\n",
+    "test_question = \"I live in Jamaica Plain and want to send my child to a school that offers Spanish classes. What schools are available?\"\n",
     "\n",
     "print(f\"\\nQuestion: {test_question}\")\n",
     "response = chatbot.get_response(test_question)\n",
